--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^4.0.1",
+    "chartjs-plugin-colorschemes": "^0.4.0",
+    "chartjs-plugin-zoom": "^1.2.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-chartjs": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
